test/tests/AmbiguousMatch.panda
class AmbiguousMatch {
    @class
    method test(x:Int8) {
    }

    @class
    method test(x:Int16) {
    }

    @class
    method test(x:Int32) {
    }

    @class
    method test(x:Int64) {
    }

    @class
    function test2(x:Int8):Int64 {
        return 1
    }

    @class
    function test2(x:Int64):Int64 {
        return 1
    }

    @class
    method main() {
        test(0)
        def a := test2(1)
    }
}